# animation_engine

./: README.md
04-Reflection/: README.md
04-Reflection/tracer/: Color.h  RayTracer.cpp  RayTracer.h  Reflection.h  Shapes.h  main.cpp  tracer.vcxproj  tracer.vcxproj.filters  vec.h
05-Shapes/: README.md
05-Shapes/tracer/: RayTracer.cpp  Scene.cpp  Scene.h  Shapes.cpp  Shapes.h  main.cpp  tracer.vcxproj.filters  vec.h
06-Perspective/: README.md
06-Perspective/tracer/: Color.h  RayGenerator.cpp  RayGenerator.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Settings.h  Shapes.cpp  Shapes.h  SurfaceProperties.h  main.cpp  tracer.vcxproj  tracer.vcxproj.filters
07-Perf_and_design/: README.md  tracer.sln
09-Textures_Transforms/: README.md
1-Basic_Ray_Tracer/: README.md
10a-Object_Oriented/: README.md
10b-Object_Oriented/: CMakeLists.txt
10b-Object_Oriented/tracer/: ArrToBmp.h  MeshReader.h  RayTracer.h  Scene.h  Shapes.cpp  Shapes.h  TextureManager.h
10c-Object-Oriented/: CMakeLists.txt  Makefile
10d-Object-Oriented/: CMakeLists.txt  Shapes1_no_pointers.cpp  Shapes2_bitwise_or.cpp  Shapes3_no_early_out.cpp  Shapes4_pass_by_value.cpp  Shapes5_copy_params_lambda.cpp
10d-Object-Oriented/tracer/: .notes.swp  Color.h  Scene.cpp  Scene.h  Settings.h  Shapes.cpp  Shapes.h  main.cpp  notes  vec.h
2-Diffuse_Lighting/: README.md
3-Specular_Lighting/: README.md
RayTracer/: RayTracer.sln  RayTracer.vcxproj  RayTracer.vcxproj.filters  hand_chair.off
current/: tracer.sln
rt/: rt.sln  rt.vcxproj  rt.vcxproj.filters
tracer/: Frame.h  Settings.h  Shapes.h  main.cpp  tracer.vcxproj  vec.cpp  vec.hpp
(+87 files in other folders)
